changed contact deets

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		</li>
 	</ul>
 	<footer>
-  	Contact details
+  	081 044 5671 | ami.ingirum@gmail.com
 		<a href="URL LinkedIn">Professional profile</a> | 
 		<a href="URL portolio"> Portfolio of work</a>
 	</footer>
