author not writer

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
 		</li>
 		<li>
-			<h4>Educational content writer: Freelance</h4>
+			<h4>Educational content author: Freelance</h4>
 			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
 		</li>
 		<li>
