updated exp fields; add quote field; footer h4s

--- a/index.html
+++ b/index.html
@@ -22,17 +22,30 @@
 	<h3>Experience</h3>
 	<ul>
 		<li>
-			<h4>Learning Design Specialist: GetSmarter</h4>
+			<h4>GetSmarter | Learning Design Specialist (2015 to current)</h4>
 			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
 		</li>
 		<li>
-			<h4>Educational content author: Freelance</h4>
+			<h4>GetSmarter | Learning Designer (2014 to 2015)</h4>
+			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum. Repurposed existing content and designed and developed for an <a href="http://testing.openlessons.getsmarter.co.za/course/view.php?id=274">open lesson </a> about wireframing in user-experience design. </p>
+		</li>
+		<li>
+			<h4>Freelance | Educational Content Author (2013 to 2014)</h4>
 			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
 		</li>
 		<li>
-			<h4>Managing Editor: Maskew Miller Longman</h4>
+			<h4>Maskew Miller Longman |  Managing Editor (2013)</h4>
 			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
 		</li>
+		<li>
+			<h4>Maskew Miller Longman |  Project Manager (2012 to 2013)</h4>
+			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+		</li>
+		<li>
+			<h4>Ocford University Press | Editorial Assistant (2012)</h4>
+			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+		</li>
+
 	</ul>
 	<div class="section-box">
 		<h3>Skills</h3>
@@ -122,9 +135,10 @@
 		</li>
 	</ul>
 	<footer>
-  	081 044 5671 | ami.ingirum@gmail.com
-		<a href="URL LinkedIn">Professional profile</a> | 
-		<a href="URL portolio"> Portfolio of work</a>
+		<h3>"Do good work for good people." - Aaron Draplin </h3>
+		<h4><a href="URL LinkedIn">Professional profile</a> | 
+		<a href="URL portolio"> Portfolio of work</a></h4>
+		+2781 044 5671 | ami.ingirum@gmail.com
 	</footer>
 </body>
 	
