--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</li>
 		<li>
 			<h4>GetSmarter | Learning Designer (2014 to 2015)</h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum. Repurposed existing content and designed and developed for an <a href="http://testing.openlessons.getsmarter.co.za/course/view.php?id=274">open lesson </a> about wireframing in user-experience design. </p>
+			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum. Designed and developed content for an <a href="http://testing.openlessons.getsmarter.co.za/course/view.php?id=274">open lesson </a> about wireframing in user-experience design. </p>
 		</li>
 		<li>
 			<h4>Freelance | Educational Content Author (2013 to 2014)</h4>
@@ -52,25 +52,51 @@
 	<ul>
 		<li>
 			<h4>lorem ipsum</h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+				<ul>
+				<li> lorem ipsum</li>
+				<li> lorem ipsum</li>
+				<li> lorem ipsum</li>
+				<li> lorem ipsum</li>
+				</ul>
 		</li>
 		<li>
 			<h4>lorem ipsum</h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+				<ul>
+				<li> lorem ipsum</li>
+				<li> lorem ipsum</li>
+				<li> lorem ipsum</li>
+				<li> lorem ipsum</li>
+				</ul>
 		</li>
 		<li>
 			<h4>lorem ipsum</h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+				<ul>
+				<li> lorem ipsum</li>
+				<li> lorem ipsum</li>
+				<li> lorem ipsum</li>
+				<li> lorem ipsum</li>
+				</ul>
 		</li>
 		<li>
 			<h4>lorem ipsum</h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+				<ul>
+				<li> lorem ipsum</li>
+				<li> lorem ipsum</li>
+				<li> lorem ipsum</li>
+				<li> lorem ipsum</li>
+				</ul>
 		</li>
 		<li>
 			<h4>lorem ipsum</h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+				<ul>
+				<li> lorem ipsum</li>
+				<li> lorem ipsum</li>
+				<li> lorem ipsum</li>
+				<li> lorem ipsum</li>
+				</ul>
 		</li>
 	</ul>
+	<p>Lorem opsum lorem ipsum lorem opsum lorem ipsum.</p>
 </div>
 	<h3>Education</h3>
 	<ul>
