--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 		</li>
 	</ul>
 	<footer>
-		<h3>"Do good work for good people." - Aaron Draplin </h3>
+		<h3>'Educational' refers to the process, not the object. - Terry Pratchett </h3>
 		<h4><a href="URL LinkedIn">Professional profile</a> | 
 		<a href="URL portolio"> Portfolio of work</a></h4>
 		+2781 044 5671 | ami.ingirum@gmail.com
