--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				</ul>
 		</li>
 	</ul>
-	<p>Lorem opsum lorem ipsum lorem opsum lorem ipsum.</p>
+	<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
 </div>
 	<h3>Education</h3>
 	<ul>
