--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
 		</li>
 		<li>
-			<h4>Ocford University Press | Editorial Assistant (2012)</h4>
+			<h4>Oxford University Press | Editorial Assistant (2012)</h4>
 			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
 		</li>
 
@@ -134,16 +134,30 @@
 	<ul>
 		<li>
 			<h4>GetSmarter | Name</h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem</p>
 			<ul>
         <li>Position</li>
+        <li>E-mail</li>
+        <li>Mobile</li>
+			</ul>
+		</li>
+		<li>
+			<h4>GetSmarter | Emma Graham </h4>
+			<ul>
+        <li>Project Manager: Postgraduate Programmes</li>
+        <li>E-mail</li>
+        <li>Mobile</li>
+			</ul>
+		</li>
+		<li>
+			<h4>GetSmarter | Graham McCarthy </h4>
+			<ul>
+        <li>Programme Manager: Advanced Diploma BPM</li>
         <li>E-mail</li>
         <li>Mobile</li>
 			</ul>
 		</li>
 		<li>
 			<h4>Freelance | </h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem</p>
 			<ul>
         <li>Position</li>
         <li>E-mail</li>
@@ -151,13 +165,22 @@
 			</ul>
 		</li>
 		<li>
-			<h4>Maskew Miller Longman or OUP | </h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem</p>
-			<ul>
-        <li>Position</li>
-        <li>E-mail</li>
-        <li>Mobile</li>
-			</ul>
+			<h4>Peer review excerpts</h4>
+		<ul>
+		<li>
+			<h5>"Ami is very nice she teaches us many things you can trust her with a good and important job. Pay her nicely."</h5>
+		</li>
+		<li>
+			<h5>"Ami is very nice she teaches us many things you can trust her with a good and important job. Pay her nicely."</h5>
+		</li>
+		<li>
+			<h5>"Ami is very nice she teaches us many things you can trust her with a good and important job. Pay her nicely."</h5>
+		</li>
+		<li>
+			<h5>"Ami is very nice she teaches us many things you can trust her with a good and important job. Pay her nicely."</h5>
+		</li>
+		</ul>
+
 		</li>
 	</ul>
 	<footer>
