--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</header>
 	<div class="infobox">
 		<h3 class="emphasis"> Get in touch | <a href="tel:+27810445671">081 044 5671</a> | <a href="mailto:ami.ingirum@gmail.com">ami.ingirum@gmail.com</a></h3>
-		<h3><a href="URL LinkedIn">Professional profile</a> | <a href="URL portolio"> Portfolio of work</a></h3>
+		<h3><a href="URL LinkedIn">Professional profile</a> | <a href="URL portfolio"> Portfolio of work</a></h3>
 	</div>
 	<br/>
 	<h3>Experience</h3>
@@ -186,7 +186,7 @@
 	<footer>
 		<h3>'Educational' refers to the process, not the object. - Terry Pratchett </h3>
 		<h4><a href="URL LinkedIn">Professional profile</a> | 
-		<a href="URL portolio"> Portfolio of work</a></h4>
+		<a href="URL portfolio"> Portfolio of work</a></h4>
 		+2781 044 5671 | ami.ingirum@gmail.com
 	</footer>
 </body>
