--- a/index.html
+++ b/index.html
@@ -48,55 +48,63 @@
 
 	</ul>
 	<div class="section-box">
-		<h3>Skills</h3>
+		<h3>Key Competencies</h3>
+		<p>These competencies are defined as per<a href=http://store.kornferry.com/store/lominger/en_US/pd/ThemeID.2815600/productID.127293400?resid=Vu7gTArR-wEAALyZcvAAAAIJ&rests=1458495563352> FYI | For Your Improvement</a>, by Lombardo, M.M. and Eichinger, R.W.</p>
 	<ul>
 		<li>
-			<h4>lorem ipsum</h4>
+			<h4>Skilled communicator and informer</h4>
 				<ul>
-				<li> lorem ipsum</li>
-				<li> lorem ipsum</li>
-				<li> lorem ipsum</li>
-				<li> lorem ipsum</li>
+				<li> Communicates information to relevant individuals to inform accurate decision-making.</li>
+				<li> Communicates information in a timely fashion.</li>
+				<li> Breaks down complex concepts in order to communicate details and areas of focus clearly.</li>
 				</ul>
 		</li>
 		<li>
-			<h4>lorem ipsum</h4>
+			<h4>Decision Quality</h4>
 				<ul>
-				<li> lorem ipsum</li>
-				<li> lorem ipsum</li>
-				<li> lorem ipsum</li>
-				<li> lorem ipsum</li>
+				<li>Makes good decisions based on a mixture of analysis, consultation, experience, and judgment.</li>
+				<li> Suggests high-quality solutions to complex problems.</li>
+				<li>Sought out by others for advice and solutions.</li>
+				<li>Flags the need for assistance or additional information or opinions when necessary.</li>
 				</ul>
 		</li>
 		<li>
-			<h4>lorem ipsum</h4>
+			<h4>Intellectual Horsepower</h4>
 				<ul>
-				<li> lorem ipsum</li>
-				<li> lorem ipsum</li>
-				<li> lorem ipsum</li>
-				<li> lorem ipsum</li>
+				<li>Deals with concepts and complexity comfortably.</li>
+				<li>Quick learner.</li>
+				<li>Agile.</li>
 				</ul>
 		</li>
 		<li>
-			<h4>lorem ipsum</h4>
+			<h4>Problem-solving</h4>
 				<ul>
-				<li> lorem ipsum</li>
-				<li> lorem ipsum</li>
-				<li> lorem ipsum</li>
-				<li> lorem ipsum</li>
+				<li>Identifies hidden problems.</li>
+				<li>Probes all fruitful sources for answers.</li>
 				</ul>
 		</li>
 		<li>
-			<h4>lorem ipsum</h4>
-				<ul>
-				<li> lorem ipsum</li>
-				<li> lorem ipsum</li>
-				<li> lorem ipsum</li>
-				<li> lorem ipsum</li>
-				</ul>
-		</li>
-	</ul>
-	<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum.</p>
+			<h4>Creativity</h4>
+			<ul>
+				<li>Easily makes connections among superficially disconnected notions.</li>
+				<li>Generates new and unique ideas quickly.</li>
+			</ul>
+			<li>
+			<h4>Time Management</h4>
+			<ul>
+				<li>Concentrates efforts on tasks according to appropriate priorities.</li>
+				<li>Can attend to a broader range of activities than peers.</li>
+			</ul>
+			</li>
+		</ul>
+<h3>Technical skills</h3>
+<ul>
+<li>Proficiency in Google products including GMail, Drive, Docs, Slides, Keep, and Chrome. </li>
+<li>Proficiency in MS Office suite including Word, Excel and PowerPoint.</li>
+<li>Comfort in both Windows and OSX.</li>
+<li>Comfort in workflow applications, including Asana, BambooHR, Takes.io, and GitHub. </li>
+<li>Working proficiency in  HTML and CSS.</li>
+</ul>
 </div>
 	<h3>Education</h3>
 	<ul>
