title tag change to LXD

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ami van Zyl</title>
+	<title>Ami van Zyl | Learning Experience Designer</title>
 	<link rel="stylesheet" type="text/css" href="CVstyles.css">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 </head>
@@ -52,7 +52,7 @@
 		<p>These competencies are defined as per<a href=http://store.kornferry.com/store/lominger/en_US/pd/ThemeID.2815600/productID.127293400?resid=Vu7gTArR-wEAALyZcvAAAAIJ&rests=1458495563352> FYI | For Your Improvement</a>, by Lombardo, M.M. and Eichinger, R.W.</p>
 	<ul>
 		<li>
-			<h4>Skilled communicator and informer</h4>
+			<h4>Informing</h4>
 				<ul>
 				<li> Communicates information to relevant individuals to inform accurate decision-making.</li>
 				<li> Communicates information in a timely fashion.</li>
