--- a/index.html
+++ b/index.html
@@ -54,18 +54,17 @@
 		<li>
 			<h4>Informing</h4>
 				<ul>
-				<li> Communicates information to relevant individuals to inform accurate decision-making.</li>
-				<li> Communicates information in a timely fashion.</li>
+				<li> Communicates relevant information in a timely manner to inform accurate decision-making.</li>
 				<li> Breaks down complex concepts in order to communicate details and areas of focus clearly.</li>
 				</ul>
 		</li>
 		<li>
 			<h4>Decision Quality</h4>
 				<ul>
-				<li>Makes good decisions based on a mixture of analysis, consultation, experience, and judgment.</li>
+				<li>Makes decisions based on a mixture of analysis, consultation, experience, and judgment.</li>
 				<li> Suggests high-quality solutions to complex problems.</li>
 				<li>Sought out by others for advice and solutions.</li>
-				<li>Flags the need for assistance or additional information or opinions when necessary.</li>
+				<li>Flags the need for assistance when necessary.</li>
 				</ul>
 		</li>
 		<li>
@@ -92,17 +91,17 @@
 			<li>
 			<h4>Time Management</h4>
 			<ul>
-				<li>Concentrates efforts on tasks according to appropriate priorities.</li>
-				<li>Can attend to a broader range of activities than peers.</li>
+				<li>Concentrates efforts according to appropriate priorities.</li>
+				<li>Can attend to a broad range of activities.</li>
 			</ul>
 			</li>
 		</ul>
 <h3>Technical skills</h3>
 <ul>
-<li>Proficiency in Google products including GMail, Drive, Docs, Slides, Keep, and Chrome. </li>
-<li>Proficiency in MS Office suite including Word, Excel and PowerPoint.</li>
-<li>Comfort in both Windows and OSX.</li>
-<li>Comfort in workflow applications, including Asana, BambooHR, Takes.io, and GitHub. </li>
+<li>Proficienct in Google products including GMail, Drive, Docs, Slides, Keep, and Chrome. </li>
+<li>Proficienct in MS Office suite including Word, Excel and PowerPoint.</li>
+<li>Proficient in both Windows and OSX.</li>
+<li>Proficient in workflow applications, including Asana, BambooHR, Takes.io, and GitHub. </li>
 <li>Working proficiency in  HTML and CSS.</li>
 </ul>
 </div>
