centred headings and reordering skills

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 		<h2>Learning Experience Designer</h2>
 		<h3><span class="emphasis">Gallup Strengths Report</span>  Ideation | Achiever | Intellection | Strategic | Learner </h3>
 	</header>
+	<div class="container">
 	<div class="infobox">
-		<h3 class="emphasis"> Get in touch | <a href="tel:+27810445671">081 044 5671</a> | <a href="mailto:ami.ingirum@gmail.com">ami.ingirum@gmail.com</a></h3>
+		<h3> Get in touch | <a href="tel:+27810445671" class="alt-link">081 044 5671</a> | <a href="mailto:ami.ingirum@gmail.com" class="alt-link">ami.ingirum@gmail.com</a></h3>
 		<h3><a href="URL LinkedIn">Professional profile</a> | <a href="URL portfolio"> Portfolio of work</a></h3>
 	</div>
 	<br/>
@@ -52,22 +53,6 @@
 		<p>These competencies are defined as per<a href=http://store.kornferry.com/store/lominger/en_US/pd/ThemeID.2815600/productID.127293400?resid=Vu7gTArR-wEAALyZcvAAAAIJ&rests=1458495563352> FYI | For Your Improvement</a>, by Lombardo, M.M. and Eichinger, R.W.</p>
 	<ul>
 		<li>
-			<h4>Informing</h4>
-				<ul>
-				<li> Communicates relevant information in a timely manner to inform accurate decision-making.</li>
-				<li> Breaks down complex concepts in order to communicate details and areas of focus clearly.</li>
-				</ul>
-		</li>
-		<li>
-			<h4>Decision Quality</h4>
-				<ul>
-				<li>Makes decisions based on a mixture of analysis, consultation, experience, and judgment.</li>
-				<li> Suggests high-quality solutions to complex problems.</li>
-				<li>Sought out by others for advice and solutions.</li>
-				<li>Flags the need for assistance when necessary.</li>
-				</ul>
-		</li>
-		<li>
 			<h4>Intellectual Horsepower</h4>
 				<ul>
 				<li>Deals with concepts and complexity comfortably.</li>
@@ -88,6 +73,22 @@
 				<li>Easily makes connections among superficially disconnected notions.</li>
 				<li>Generates new and unique ideas quickly.</li>
 			</ul>
+			<li>
+			<h4>Informing</h4>
+				<ul>
+				<li> Communicates relevant information in a timely manner to inform accurate decision-making.</li>
+				<li> Breaks down complex concepts in order to communicate details and areas of focus clearly.</li>
+				</ul>
+		</li>
+		<li>
+			<h4>Decision Quality</h4>
+				<ul>
+				<li>Makes decisions based on a mixture of analysis, consultation, experience, and judgment.</li>
+				<li> Suggests high-quality solutions to complex problems.</li>
+				<li>Sought out by others for advice and solutions.</li>
+				<li>Flags the need for assistance when necessary.</li>
+				</ul>
+		</li>
 			<li>
 			<h4>Time Management</h4>
 			<ul>
@@ -187,9 +188,9 @@
 			<h5>"Ami is very nice she teaches us many things you can trust her with a good and important job. Pay her nicely."</h5>
 		</li>
 		</ul>
-
 		</li>
 	</ul>
+</div>
 	<footer>
 		<h3>'Educational' refers to the process, not the object. - Terry Pratchett </h3>
 		<h4><a href="URL LinkedIn">Professional profile</a> | 
