more h5s and spanning text 80%

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
 		</li>
 		<li>
-			<h4>Maskew Miller Longman |  Project Manager (2012 to 2013)</h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+			<h5>Maskew Miller Longman |  Project Manager (2012 to 2013)</h5>
+			<p><span class="smallbody">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum loremipsum lorem ipsum lorem ipsum </span></p>
 		</li>
 		<li>
-			<h4>Oxford University Press | Editorial Assistant (2012)</h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+			<h5>Oxford University Press | Editorial Assistant (2012)</h5>
+			<p><span class="smallbody">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum loremipsum lorem ipsum lorem ipsum </span></p>
 		</li>
 
 	</ul>
