--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
 	<ul>
 		<li>
 			<h4>GetSmarter | Learning Design Specialist (2015 to current)</h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+			<p> <h5> Key project: UCT Post-Graduate Diploma in Management in Marketing </h5>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
 		</li>
 		<li>
 			<h4>GetSmarter | Learning Designer (2014 to 2015)</h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum. Designed and developed content for an <a href="http://testing.openlessons.getsmarter.co.za/course/view.php?id=274">open lesson </a> about wireframing in user-experience design. </p>
+			<p> <h5> Key projects: UCT Post-Graduate Diploma in Management in Marketing and SEO short course </h5>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum. Designed and developed content for an <a href="http://testing.openlessons.getsmarter.co.za/course/view.php?id=274">open lesson </a> about wireframing in user-experience design. </p>
 		</li>
 		<li>
 			<h4>Freelance | Educational Content Author (2013 to 2014)</h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+			<p><h5> Key projects: Oxbridge Management Communication 101, 201, 301 </h5>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
 		</li>
 		<li>
-			<h4>Maskew Miller Longman |  Managing Editor (2013)</h4>
+			<h4>Maskew Miller Longman |  Managing Editor (2013) <h5> Key projects: Natural Sciences Grades 4 to 6 (CAPS)</h5></h4>
 			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
 		</li>
 		<!-- <li>
@@ -123,29 +123,25 @@
 	<h3>Interests</h3>
 	<ul>
 		<li>
-			<h4>lorem ipsum</h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+			<h4>Watercolours</h4>
+			<p>At the moment, I am particularly enjoying painting miniature portraits of snack foods.</p>
 		</li>
 		<li>
-			<h4>lorem ipsum</h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+			<h4>Creative writing</h4>
+			<p>Award for Go; Microfiction award; Award for Notes on...</p>
 		</li>
-		<li>
-			<h4>lorem ipsum</h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+				<li>
+			<h4>Information systems</h4>
+			<p>Dabbling in code for fun and profit.</p>
+		</li>
+			<li>
+			<h4>Gaming</h4>
+			<p>PC, PS and tabletop. Particularly interested in the potential of gaming principles in learning for alternative audiences.</p>
 		</li>
 	</ul>
 </div>
 	<h3>References</h3>
 	<ul>
-		<li>
-			<h4>GetSmarter | Name</h4>
-			<ul>
-        <li>Position</li>
-        <li>E-mail</li>
-        <li>Mobile</li>
-			</ul>
-		</li>
 		<li>
 			<h4>GetSmarter | Emma Graham </h4>
 			<ul>
@@ -157,15 +153,24 @@
 		<li>
 			<h4>GetSmarter | Graham McCarthy </h4>
 			<ul>
-        <li>Programme Manager: Advanced Diploma BPM</li>
+        <li>Programme Manager: Advanced Diploma BPM; Online Facilitator</li>
         <li>E-mail</li>
         <li>Mobile</li>
 			</ul>
 		</li>
 		<li>
-			<h4>Freelance | </h4>
+			<h4>Laetitia Botha </h4>
 			<ul>
-        <li>Position</li>
+        <li>Part-time Lecturer, UCT 
+        Department of Education;  Publishing professional</li>
+        <li>E-mail</li>
+        <li>Mobile</li>
+			</ul>
+		</li>
+		<li>
+			<h4> Dr Sumarie Roodt </h4>
+			<ul>
+        <li>Senior Lecturer, UCT Department of Information Systems</li>
         <li>E-mail</li>
         <li>Mobile</li>
 			</ul>
