--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		</div>
 		<H1>Ami van Zyl</H1>
 		<h2>Learning Experience Designer</h2>
-		<h3><span class="emphasis">Gallup Strengths Report</span>  Ideation | Achiever | Intellection | Strategic | Learner </h3>
+		<h3><span class="emphasis">Gallup StrengthsFinder Results</span>  Ideation | Achiever | Intellection | Strategic | Learner </h3>
 	</header>
 	<div class="container">
 	<div class="infobox">
