--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div class="container">
 	<div class="infobox">
 		<h3> Get in touch | <a href="tel:+27810445671" class="alt-link">081 044 5671</a> | <a href="mailto:ami.ingirum@gmail.com" class="alt-link">ami.ingirum@gmail.com</a></h3>
-		<h3><a href="URL LinkedIn">Professional profile</a> | <a href="URL portfolio"> Portfolio</a></h3>
+		<h3><a href="URL LinkedIn">LinkedIn</a> | <a href="URL portfolio"> Portfolio</a></h3>
 	</div>
 	<br/>
 	<h3>Experience</h3>
@@ -49,7 +49,7 @@
 	</ul>
 	<div class="section-box">
 		<h3>Key Competencies</h3>
-		<p>These competencies are defined as per<a href=http://store.kornferry.com/store/lominger/en_US/pd/ThemeID.2815600/productID.127293400?resid=Vu7gTArR-wEAALyZcvAAAAIJ&rests=1458495563352> FYI | For Your Improvement</a>, by Lombardo, M.M. and Eichinger, R.W.</p>
+		<p>These competencies are informed by<a href=http://store.kornferry.com/store/lominger/en_US/pd/ThemeID.2815600/productID.127293400?resid=Vu7gTArR-wEAALyZcvAAAAIJ&rests=1458495563352> FYI | For Your Improvement</a>, by Lombardo, M.M. and Eichinger, R.W.</p>
 	<ul>
 	<li>
 			<h4>Creativity</h4>
@@ -97,10 +97,10 @@
 		</ul>
 <h3>Technical skills</h3>
 <ul>
-<li>Proficienct in Google products including GMail, Drive, Docs, Slides, Keep, and Chrome. </li>
-<li>Proficienct in MS Office suite including Word, Excel and PowerPoint.</li>
+<li>Proficienct in Google applications including GMail, Drive, and Docs.</li>
+<li>Proficienct in extended MS Office suite.</li>
 <li>Proficient in both Windows and OSX.</li>
-<li>Proficient in workflow applications, including Asana, BambooHR, Takes.io, and GitHub. </li>
+<li>Proficient in workflow applications, including Asana and GitHub.</li>
 <li>Working proficiency in  HTML and CSS.</li>
 </ul>
 </div>
@@ -187,16 +187,13 @@
 		<li>
 			<h5>"Ami is very nice she teaches us many things you can trust her with a good and important job. Pay her nicely."</h5>
 		</li>
-		<li>
-			<h5>"Ami is very nice she teaches us many things you can trust her with a good and important job. Pay her nicely."</h5>
-		</li>
 		</ul>
 		</li>
 	</ul>
 </div>
 	<footer>
 		<h3>'Educational' refers to the process, not the object. - Terry Pratchett </h3>
-		<h4><a href="URL LinkedIn">Professional profile</a> | 
+		<h4><a href="URL LinkedIn">LinkedIn</a> <span class="whitepipe">|</span>
 		<a href="URL portfolio"> Portfolio</a></h4>
 		+2781 044 5671 | ami.ingirum@gmail.com
 	</footer>
