added functional expertise to skills, shortened personal competencies

--- a/index.html
+++ b/index.html
@@ -48,7 +48,40 @@
 		</li> -->
 	</ul>
 	<div class="section-box">
-		<h3>Key Competencies</h3>
+		<h3>Functional Expertise</h3>
+<ul>
+	<li>
+			<h4>Curriculum Design</h4>
+			<ul>
+				<li>Lorem ipsum.</li>
+			</ul>
+		</li> 
+			<li>
+			<h4>Content creation</h4>
+			<ul>
+				<li>Lorem ipsum.</li>
+			</ul>
+		</li> 
+		<li>
+			<h4>Quality Assurance</h4>
+			<ul>
+				<li>Lorem ipsum.</li>
+			</ul>
+		</li> 
+		<li>
+			<h4>Stakeholder Management</h4>
+			<ul>
+				<li>Lorem ipsum.</li>
+			</ul>
+		</li> 
+	<li>
+			<h4>Training</h4>
+			<ul>
+				<li>Lorem ipsum.</li>
+			</ul>
+		</li> 
+</ul>
+		<h3>Personal Competencies</h3>
 		<p>These competencies are informed by<a href=http://store.kornferry.com/store/lominger/en_US/pd/ThemeID.2815600/productID.127293400?resid=Vu7gTArR-wEAALyZcvAAAAIJ&rests=1458495563352> FYI | For Your Improvement</a>, by Lombardo, M.M. and Eichinger, R.W.</p>
 	<ul>
 	<li>
@@ -57,40 +90,35 @@
 				<li>Easily makes connections among superficially disconnected notions.</li>
 				<li>Generates new and unique ideas quickly.</li>
 			</ul>
+		</li>
 		<li>
 			<h4>Intellectual Horsepower</h4>
 				<ul>
-				<li>Deals with concepts and complexity comfortably.</li>
-				<li>Quick learner.</li>
+				<li>Comfortable with complexity.</li>
+				<li>Fast learner.</li>
 				<li>Agile.</li>
-				</ul>
-		</li>
-		<li>
-			<h4>Problem-solving</h4>
-				<ul>
-				<li>Identifies hidden problems.</li>
-				<li>Probes all fruitful sources for answers.</li>
 				</ul>
 		</li>
 			<li>
 			<h4>Informing</h4>
 				<ul>
-				<li> Communicates relevant information in a timely manner to inform accurate decision-making.</li>
-				<li> Breaks down complex concepts in order to communicate details and areas of focus clearly.</li>
+				<li> Communicates relevant information in a timely manner.</li>
+				<li> Breaks down complex concepts in order to communicate details clearly.</li>
 				</ul>
 		</li>
 		<li>
-			<h4>Decision Quality</h4>
+			<h4> Problem-solving and Decision Quality</h4>
 				<ul>
 				<li> Suggests high-quality solutions to complex problems.</li>
+				<li> Identifies hidden problems.</li>
 				<li>Sought out by others for advice and solutions.</li>
-				<li>Flags the need for assistance when necessary.</li>
+				<li>Proactively flags the need for input.</li>
 				</ul>
 		</li>
 			<li>
 			<h4>Time Management</h4>
 			<ul>
-				<li>Concentrates efforts according to appropriate priorities.</li>
+				<li>Concentrates efforts according to defined priorities.</li>
 				<li>Can attend to a broad range of activities.</li>
 			</ul>
 			</li>
