changed tech skills

--- a/index.html
+++ b/index.html
@@ -87,30 +87,28 @@
 	<li>
 			<h4>Creativity</h4>
 			<ul>
-				<li>Easily makes connections among superficially disconnected notions.</li>
-				<li>Generates new and unique ideas quickly.</li>
+				<li>Easily makes new connections among superficially disconnected notions.</li>
+				<li>Generates unique ideas.</li>
 			</ul>
 		</li>
 		<li>
 			<h4>Intellectual Horsepower</h4>
 				<ul>
 				<li>Comfortable with complexity.</li>
-				<li>Fast learner.</li>
-				<li>Agile.</li>
+				<li>Agiel, and a fast learner.</li>
 				</ul>
 		</li>
 			<li>
 			<h4>Informing</h4>
 				<ul>
-				<li> Communicates relevant information in a timely manner.</li>
-				<li> Breaks down complex concepts in order to communicate details clearly.</li>
+				<li> Communication is clear and timely.</li>
+				<li> Breaks down complex concepts in order to convey key details.</li>
 				</ul>
 		</li>
 		<li>
 			<h4> Problem-solving and Decision Quality</h4>
 				<ul>
-				<li> Suggests high-quality solutions to complex problems.</li>
-				<li> Identifies hidden problems.</li>
+				<li> Suggests streamlined solutions to complex problems.</li>
 				<li>Sought out by others for advice and solutions.</li>
 				<li>Proactively flags the need for input.</li>
 				</ul>
@@ -118,19 +116,14 @@
 			<li>
 			<h4>Time Management</h4>
 			<ul>
-				<li>Concentrates efforts according to defined priorities.</li>
+				<li>Concentrates efforts according to priorities.</li>
 				<li>Can attend to a broad range of activities.</li>
 			</ul>
 			</li>
-		</ul>
+		</ul> 
+		<span class="smaller">
 <h3>Technical skills</h3>
-<ul>
-<li>Proficienct in Google applications including GMail, Drive, and Docs.</li>
-<li>Proficienct in extended MS Office suite.</li>
-<li>Proficient in both Windows and OSX.</li>
-<li>Proficient in workflow applications, including Asana and GitHub.</li>
-<li>Working proficiency in  HTML and CSS.</li>
-</ul>
+Proficienct in: Google apps, including GMail, Drive, and Docs; the extended MS Office suite; Windows and OSX; workflow applications, including Asana and GitHub; and HTML and CSS. </span>
 </div>
 	<h3>Education</h3>
 	<ul>
