fixed copy errors top to bottom

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</li>
 		<li>
 			<h4>GetSmarter | Learning Designer (2014 to 2015)</h4>
-			<p> <h5> Key projects: UCT Post-Graduate Diploma in Management in Marketing and SEO short course </h5>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum. Designed and developed content for an <a href="http://testing.openlessons.getsmarter.co.za/course/view.php?id=274">open lesson </a> about wireframing in user-experience design. </p>
+			<p> <h5> Key projects: UCT Post-Graduate Diploma in Management in Marketing; SEO short course </h5>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum. Designed and developed content for an <a href="http://testing.openlessons.getsmarter.co.za/course/view.php?id=274">open lesson </a> about wireframing in user-experience design. </p>
 		</li>
 		<li>
 			<h4>Freelance | Educational Content Author (2013 to 2014)</h4>
@@ -57,7 +57,7 @@
 			</ul>
 		</li> 
 			<li>
-			<h4>Content creation</h4>
+			<h4>Content Creation</h4>
 			<ul>
 				<li>Lorem ipsum.</li>
 			</ul>
@@ -82,7 +82,7 @@
 		</li> 
 </ul>
 		<h3>Personal Competencies</h3>
-		<p>These competencies are informed by<a href=http://store.kornferry.com/store/lominger/en_US/pd/ThemeID.2815600/productID.127293400?resid=Vu7gTArR-wEAALyZcvAAAAIJ&rests=1458495563352> FYI | For Your Improvement</a>, by Lombardo, M.M. and Eichinger, R.W.</p>
+		<p>These competencies are informed by<a href=http://store.kornferry.com/store/lominger/en_US/pd/ThemeID.2815600/productID.127293400?resid=Vu7gTArR-wEAALyZcvAAAAIJ&rests=1458495563352> FYI | For Your Improvement</a>.</p>
 	<ul>
 	<li>
 			<h4>Creativity</h4>
@@ -95,7 +95,7 @@
 			<h4>Intellectual Horsepower</h4>
 				<ul>
 				<li>Comfortable with complexity.</li>
-				<li>Agiel, and a fast learner.</li>
+				<li>Agile, and a fast learner.</li>
 				</ul>
 		</li>
 			<li>
@@ -166,7 +166,7 @@ Proficienct in: Google apps, including GMail, Drive, and Docs; the extended MS O
 		<li>
 			<h4>GetSmarter | Emma Graham </h4>
 			<ul>
-        <li>Project Manager: Postgraduate Programmes</li>
+        <li>Project Manager: Post-Graduate Programmes</li>
         <li>E-mail</li>
         <li>Mobile</li>
 			</ul>
