shortened etc. next step is to put verb in active form and shorten more

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Ami van Zyl | Learning Experience Designer</title>
 	<link rel="stylesheet" type="text/css" href="CVstyles.css">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -16,36 +17,58 @@
 	</header>
 	<div class="container">
 	<div class="infobox">
-		<h3> Get in touch | <a href="tel:+27810445671" class="alt-link">081 044 5671</a> | <a href="mailto:ami.ingirum@gmail.com" class="alt-link">ami.ingirum@gmail.com</a></h3>
-		<h3><a href="URL LinkedIn">LinkedIn</a> | <a href="URL portfolio"> Portfolio</a></h3>
+		<h3> Get in touch | 
+			<a href="tel:+27810445671" class="alt-link">081 044 5671</a> | 
+			<a href="mailto:ami.ingirum@gmail.com" class="alt-link">ami.ingirum@gmail.com</a> | 
+			<a href="https://goo.gl/maps/RRSb8sHdqrm" class="alt-link"> Rondebosch, Cape Town </a> </h3>
+		<!-- <h3><a href="URL LinkedIn">LinkedIn</a> | <a href="URL portfolio"> Portfolio</a></h3> -->
 	</div>
 	<br/>
 	<h3>Experience</h3>
 	<ul>
 		<li>
-			<h4>GetSmarter | Learning Design Specialist (2015 to current)</h4>
-			<p> <h5> Key project: UCT Post-Graduate Diploma in Management in Marketing </h5>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+			<h4>Learning Design Specialist | GetSmarter, Observatory (2015 to current)</h4>
+			<p> <h5> Key project: UCT Post-Graduate Diploma in Management in Marketing </h5>Designed and developed NQF 8 courses for South Africa's first blended postgraduate diploma, while overseeing the design, development and timelines of concurrently developed courses on the programme. This role also focused on research within the field of Learning Design, improving competencies within the team, and providing ad hoc design support to other project teams.</p>
+			<p> Developed: 
+			<ul> <li> Organisation and Management</li>
+			<li> Effective People Practices</li>
+			<li>Business Research and Communication (Capstone course)</li> 
+			<li> Managerial Information Systems</li></ul> </p> 
+			<p> Performed quality assurance and timeline management on five semester courses (NQF 5 to 8), across marketing and management fields.
+			</p> 
+			<!-- <ul> <li> Consumer Behaviour</li>
+				<li> Electronic Marketing</li>
+				<li> Managerial Finance (NQF 5) </li>
+				<li> Retail Management and Services Marketing </li>
+				<li> Events Management</li>
+				</ul> -->
+			<p> Contributed the article series <i> Learner Experience Design: The Lean Learning Path</i> to the GetSmarter Knowledge Commons iniative, and performed Department-wide training on lean product design within Learning Design. 
+			</p>
 		</li>
 		<li>
-			<h4>GetSmarter | Learning Designer (2014 to 2015)</h4>
+			<h4>Learning Designer | GetSmarter, Observatory (2014 to 2015)</h4>
 			<p> <h5> Key projects: UCT Post-Graduate Diploma in Management in Marketing; SEO short course </h5>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum. Designed and developed content for an <a href="http://testing.openlessons.getsmarter.co.za/course/view.php?id=274">open lesson </a> about wireframing in user-experience design. </p>
 		</li>
 		<li>
-			<h4>Freelance | Educational Content Author (2013 to 2014)</h4>
+			<h4>Educational Content Author | Freelance, Cape Town (2013 to 2014)</h4>
 			<p><h5> Key projects: Oxbridge Management Communication 101, 201, 301 </h5>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
 		</li>
 		<li>
-			<h4>Maskew Miller Longman |  Managing Editor (2013) <h5> Key projects: Natural Sciences Grades 4 to 6 (CAPS)</h5></h4>
+			<h4>Managing Editor | Maskew Miller Longman, Pinelands (2013) <h5> Key projects: Natural Sciences Grades 4 to 6 (CAPS)</h5></h4>
 			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
 		</li>
-		<!-- <li>
-			<h5>Maskew Miller Longman |  Project Manager (2012 to 2013)</h5>
-			<p><span class="smallbody">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum loremipsum lorem ipsum lorem ipsum </span></p>
-		</li> -->
-	<!-- 	<li>
-			<h5>Oxford University Press | Editorial Assistant (2012)</h5>
-			<p><span class="smallbody">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum loremipsum lorem ipsum lorem ipsum </span></p>
-		</li> -->
+		<li>
+			<h5>Project Manager | Maskew Miller Longman, Pinelands (2012 to 2013)</h5>
+		</li> 
+	<li>
+			<h5>Editorial Assistant | Oxford University Press, Goodwood (2012)</h5>
+		</li> 
+		<li>
+		<h5>Proofreading, translation and editing of educational content | Freelance, Cape Town (2010 to 2012)</h5>
+		</li> 
+		<li>
+		<h5>Junior Technical Writer | PSSE, Stellenbosch (2009)</h5>
+		</li> 
 	</ul>
 	<div class="section-box">
 		<h3>Functional Expertise</h3>
@@ -65,8 +88,10 @@
 		<li>
 			<h4>Quality Assurance</h4>
 			<ul>
-				<li>Lorem ipsum.</li>
-			</ul>
+				<li> Design consultation </li>	
+				<li> Detailed evaluation of all content against Adult- and Online- Education best principles</li>
+				<li> Timeline management</li>	
+		</ul>
 		</li> 
 		<li>
 			<h4>Stakeholder Management</h4>
@@ -77,6 +102,7 @@
 	<li>
 			<h4>Training</h4>
 			<ul>
+					<li> Identification and remediation of training gaps within PGDip MM and greater Learning Design team</li>
 				<li>Lorem ipsum.</li>
 			</ul>
 		</li> 
@@ -129,15 +155,16 @@ Proficienct in: Google apps, including GMail, Drive, and Docs; the extended MS O
 	<ul>
 		<li>
 			<h4>UCT</h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum. Golden Key Society member since 2008. </p>
 		</li>
 		<li>
 			<h4>Training</h4>
 			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
 		</li>
+
 		<li>
 			<h4>Parel Vallei</h4>
-			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+			<p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum. including A-levels </p>
 		</li>
 	</ul>
 	<div class="section-box">
@@ -156,23 +183,23 @@ Proficienct in: Google apps, including GMail, Drive, and Docs; the extended MS O
 			<p>Dabbling in code for fun and profit.</p>
 		</li>
 			<li>
-			<h4>Gaming</h4>
-			<p>PC, PS and tabletop. Particularly interested in the potential of gaming principles in learning for alternative audiences.</p>
+			<h4>User experience design</h4>
+			<p></p>
 		</li>
 	</ul>
 </div>
 	<h3>References</h3>
 	<ul>
 		<li>
-			<h4>GetSmarter | Emma Graham </h4>
+			<h4>Emma Graham | GetSmarter</h4>
 			<ul>
-        <li>Project Manager: Post-Graduate Programmes</li>
+        <li>Business Development Manager</li>
         <li>E-mail</li>
         <li>Mobile</li>
 			</ul>
 		</li>
 		<li>
-			<h4>GetSmarter | Graham McCarthy </h4>
+			<h4>Graham McCarthy | GetSmarter </h4>
 			<ul>
         <li>Programme Manager: Advanced Diploma BPM; Online Facilitator</li>
         <li>E-mail</li>
@@ -188,34 +215,34 @@ Proficienct in: Google apps, including GMail, Drive, and Docs; the extended MS O
         <li>Mobile</li>
 			</ul>
 		</li>
-		<li>
+		<!-- <li>
 			<h4> Dr Sumarie Roodt </h4>
 			<ul>
         <li>Senior Lecturer, UCT Department of Information Systems</li>
         <li>E-mail</li>
         <li>Mobile</li>
 			</ul>
-		</li>
+		</li> -->
 		<li>
 			<h4>Peer review excerpts</h4>
 		<ul>
 		<li>
 			<h5>"Ami is very nice she teaches us many things you can trust her with a good and important job. Pay her nicely."</h5>
 		</li>
-		<li>
+		<!-- <li>
 			<h5>"Ami is very nice she teaches us many things you can trust her with a good and important job. Pay her nicely."</h5>
 		</li>
 		<li>
 			<h5>"Ami is very nice she teaches us many things you can trust her with a good and important job. Pay her nicely."</h5>
-		</li>
+		</li> -->
 		</ul>
 		</li>
 	</ul>
 </div>
 	<footer>
-		<h3>'Educational' refers to the process, not the object. - Terry Pratchett </h3>
-		<h4><a href="URL LinkedIn">LinkedIn</a> <span class="whitepipe">|</span>
-		<a href="URL portfolio"> Portfolio</a></h4>
+		<!-- <h3>'Educational' refers to the process, not the object. - Terry Pratchett </h3> -->
+		<!-- <h4><a href="URL LinkedIn">LinkedIn</a> <span class="whitepipe">|</span> -->
+		<!-- <a href="URL portfolio"> Portfolio</a></h4> -->
 		+2781 044 5671 | ami.ingirum@gmail.com
 	</footer>
 </body>
